tests/src/frontend/typechecking/invalid/memo_mut_2.sk
class Foo() {
  memoized fun no(): () -> void {
    () -> void
  }
}
